--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,20 +18,8 @@
         android:id="@+id/textView"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignLeft="@+id/editText"
-        android:layout_alignStart="@+id/editText" />
-
-    <Button
-        android:text="About"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
-        android:id="@+id/about_btn"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="11dp" />
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -39,25 +27,35 @@
         android:inputType="textPersonName"
         android:ems="10"
         android:layout_below="@+id/textView"
-        android:layout_alignLeft="@+id/about_btn"
-        android:layout_alignStart="@+id/about_btn"
         android:layout_marginTop="15dp"
         android:id="@+id/editText"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:text="About"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/about_btn"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
 
     <android.support.design.widget.FloatingActionButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:clickable="true"
-        app:fabSize="mini"
+
         app:srcCompat="@android:drawable/ic_menu_share"
         android:id="@+id/share_floatButn"
+        tools:backgroundTint="@color/colorPrimary"
+        app:backgroundTint="?android:attr/colorPrimaryDark"
+        app:elevation="7dp"
+        android:layout_marginTop="14dp"
         android:layout_below="@+id/editText"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginRight="19dp"
-        android:layout_marginEnd="19dp"
-        tools:backgroundTint="@color/colorPrimary"
-        app:backgroundTint="?android:attr/colorPrimaryDark" />
+        app:fabSize="normal" />
 </RelativeLayout>
